// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeSnippet copy confirmation is shown after copying and clears after the timeout 1`] = `
<div
  class="group relative mb-2 "
>
  <pre
    class="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
  >
    <code
      class="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
  <div
    class="pointer-events-none absolute left-1/2 top-0 flex h-full w-full -translate-x-1/2 transform items-center justify-center rounded-md bg-green-600 text-base font-bold text-white opacity-90"
  >
    Copied to clipboard!
  </div>
</div>
`;

exports[`CodeSnippet copy guidance is not shown by default 1`] = `
<div
  class="group relative mb-2 "
>
  <pre
    class="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
  >
    <code
      class="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is shown on hover 1`] = `
<div
  class="group relative mb-2 cursor-pointer"
>
  <pre
    class="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
  >
    <code
      class="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
  <div
    class="left pointer-events-none absolute top-0 flex h-full w-full items-center justify-center rounded-md bg-black text-base font-bold text-white opacity-75 dark:bg-gray-100 dark:text-black"
  >
    Click to copy
  </div>
</div>
`;
